Fix source map generation

--- a/css/bulma.css
+++ b/css/bulma.css
@@ -4201,6 +4201,7 @@ a.tag:hover {
 
 .title {
   color: #363636;
+  font-family: inherit;
   font-size: 2rem;
   font-weight: 600;
   line-height: 1.125;
@@ -4249,6 +4250,7 @@ a.tag:hover {
 
 .subtitle {
   color: #4a4a4a;
+  font-family: inherit;
   font-size: 1.25rem;
   font-weight: 400;
   line-height: 1.25;
@@ -10824,5 +10826,4 @@ label.panel-block:hover {
   padding: 3rem 1.5rem 6rem;
   color: inherit;
 }
-
 /*# sourceMappingURL=bulma.css.map */
