--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -4202,6 +4202,7 @@ a.tag:hover {
 
 .title {
   color: #363636;
+  font-family: inherit;
   font-size: 2rem;
   font-weight: 600;
   line-height: 1.125;
@@ -4250,6 +4251,7 @@ a.tag:hover {
 
 .subtitle {
   color: #4a4a4a;
+  font-family: inherit;
   font-size: 1.25rem;
   font-weight: 400;
   line-height: 1.25;
@@ -15515,5 +15517,4 @@ svg {
     transform: matrix3d(1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
   }
 }
-
 /*# sourceMappingURL=bulma-docs.css.map */
