--- a/css/bulma.themeable.css
+++ b/css/bulma.themeable.css
@@ -4202,6 +4202,7 @@ a.tag:hover {
 
 .title {
   color: var(--blm-title-color);
+  font-family: var(--blm-title-family);
   font-size: var(--blm-title-size);
   font-weight: var(--blm-title-weight);
   line-height: var(--blm-title-line-height);
@@ -4250,6 +4251,7 @@ a.tag:hover {
 
 .subtitle {
   color: var(--blm-subtitle-color);
+  font-family: var(--blm-subtitle-family);
   font-size: var(--blm-subtitle-size);
   font-weight: var(--blm-subtitle-weight);
   line-height: var(--blm-subtitle-line-height);
@@ -11512,6 +11514,7 @@ label.panel-block:hover {
   --blm-title-sub-size: 0.75em;
   --blm-title-sup-size: 0.75em;
   --blm-title-color: hsla(var(--blm-title-color-h),var(--blm-title-color-s),var(--blm-title-color-l),var(--blm-title-color-a));
+  --blm-title-family: inherit;
   --blm-title-size: var(--blm-size-3);
   --blm-title-weight: var(--blm-weight-semibold);
   --blm-title-line-height: 1.125;
@@ -11519,6 +11522,7 @@ label.panel-block:hover {
   --blm-title-strong-weight: inherit;
   --blm-subtitle-negative-margin: -1.25rem;
   --blm-subtitle-color: hsla(var(--blm-subtitle-color-h),var(--blm-subtitle-color-s),var(--blm-subtitle-color-l),var(--blm-subtitle-color-a));
+  --blm-subtitle-family: inherit;
   --blm-subtitle-size: var(--blm-size-5);
   --blm-subtitle-weight: var(--blm-weight-normal);
   --blm-subtitle-line-height: 1.25;
@@ -12252,5 +12256,4 @@ label.panel-block:hover {
   --blm-footer-padding: 3rem 1.5rem 6rem;
   --blm-footer-color: inherit;
 }
-
 /*# sourceMappingURL=bulma.themeable.css.map */
