--- a/sass/elements/title.sass
+++ b/sass/elements/title.sass
@@ -1,5 +1,5 @@
 $title-color: v("text-strong") !default
-$title-family: false !default
+$title-family: inherit !default
 $title-size: v("size-3") !default
 $title-weight: v("weight-semibold") !default
 $title-line-height: 1.125 !default
@@ -9,7 +9,7 @@ $title-sub-size: 0.75em !default
 $title-sup-size: 0.75em !default
 
 $subtitle-color: v("text") !default
-$subtitle-family: false !default
+$subtitle-family: inherit !default
 $subtitle-size: v("size-5") !default
 $subtitle-weight: v("weight-normal") !default
 $subtitle-line-height: 1.25 !default
@@ -25,6 +25,9 @@ $subtitle-negative-margin: -1.25rem !default
 @include vRegister(title-line-height,$title-line-height)
 @include vRegister(title-strong-color,$title-strong-color)
 @include vRegister(title-strong-weight,$title-strong-weight)
+@include vRegister(title-family,$title-family)
+@include vRegister(subtitle-family,$subtitle-family)
+
 
 @include vRegister(subtitle-negative-margin,$subtitle-negative-margin)
 @include vRegister(subtitle-color,$subtitle-color)
@@ -50,8 +53,7 @@ $subtitle-negative-margin: -1.25rem !default
 
 .title
   color: v("title-color")
-  @if $title-family
-    font-family: v("title-family")
+  font-family: v("title-family")
   font-size: v("title-size")
   font-weight: v("title-weight")
   line-height: v("title-line-height")
@@ -70,8 +72,7 @@ $subtitle-negative-margin: -1.25rem !default
 
 .subtitle
   color: v("subtitle-color")
-  @if $subtitle-family // Maybe replace with inherit
-    font-family: v("subtitle-family")
+  font-family: v("subtitle-family")
   font-size: v("subtitle-size")
   font-weight: v("subtitle-weight")
   line-height: v("subtitle-line-height")
