Fix tree shaking of unused variables and add shortening ability

--- a/sass/themeable/css-variables.sass
+++ b/sass/themeable/css-variables.sass
@@ -1,16 +1,15 @@
 @mixin defineVariable($var, $value)
   #{varName($var)}: #{$value}
 
-@if variable-exists(themeable)
-  @if $themeable == "any"
-    \:root, [data-theme=bulma]
-      @each $name in $used_vars
-        @include defineVariable($name, map_get($registered_vars, $name))
-  @else
-    @each $theme, $vars in $css_vars
-      $selector: "[data-theme=#{$theme}]"
-      @if $theme == "default"
-        $selector: ":root #{$selector}"
-      #{$selector}
-        @each $name, $value in $vars
-          @include defineVariable($name, map_get($registered_vars, $name))
+@if $themeable == "any"
+  \:root, [data-theme=bulma]
+    @each $name in $used_vars
+      @include defineVariable($name, map_get($registered_vars, $name))
+@elseif $themeable
+  @each $theme, $vars in $css_vars
+    $selector: "[data-theme=#{$theme}]"
+    @if $theme == "default"
+      $selector: ":root #{$selector}"
+    #{$selector}
+      @each $name, $value in $vars
+        @include defineVariable($name, $value)
