--- a/sass/utilities/initial-variables.sass
+++ b/sass/utilities/initial-variables.sass
@@ -1,5 +1,11 @@
-// Colors
+// Flags
+$variable-columns: true !default
+$fullhd-enabled: true !default
+$widescreen-enabled: true !default
+$themeable: false !default
+$shorten: true !default
 
+// Colors
 $black: hsl(0, 0%, 4%) !default
 $black-bis: hsl(0, 0%, 7%) !default
 $black-ter: hsl(0, 0%, 14%) !default
@@ -122,8 +128,3 @@ $speed: 86ms !default
 @include vRegister(radius-large, $radius-large)
 @include vRegister(radius-rounded, $radius-rounded)
 @include vRegister(speed, $speed)
-
-// Flags
-$variable-columns: true !default
-$fullhd-enabled: true !default
-$widescreen-enabled: true !default
